--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Form with Sections</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="inquiry form.css">
+    <link rel="stylesheet" href="inquiry_form.css">
 </head>
 <body>
     <div class="animation-wrapper">
@@ -248,6 +248,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-    <script src="inquiry form.js"></script>
+    <script src="inquiry_form.js"></script>
 </body>
 </html>
