--- a/index.html
+++ b/index.html
@@ -108,16 +108,16 @@
                                 <h4>Bachelor's Degree</h4>
                                 <div class="row">
                                     <div class="col-md-3 mb-3">
-                                        <input type="number" name="bachelorsYear" class="form-control" placeholder="Completion Year" min="1950" max="2099" required>
+                                        <input type="number" name="bachelorsYear" class="form-control" placeholder="Completion Year" min="1950" max="2099">
                                     </div>
                                     <div class="col-md-3 mb-3">
-                                        <input type="text" name="bachelorsUniversity" class="form-control" placeholder="University Name" required>
+                                        <input type="text" name="bachelorsUniversity" class="form-control" placeholder="University Name">
                                     </div>
                                     <div class="col-md-3 mb-3">
-                                        <input type="text" name="bachelorsDegree" class="form-control" placeholder="Degree" required>
+                                        <input type="text" name="bachelorsDegree" class="form-control" placeholder="Degree">
                                     </div>
                                     <div class="col-md-3 mb-3">
-                                        <input type="number" name="bachelorsPercentage" class="form-control" placeholder="Percentage/CGPA" min="0" max="100" step="0.01" required>
+                                        <input type="number" name="bachelorsPercentage" class="form-control" placeholder="Percentage/CGPA" min="0" max="100" step="0.01">
                                     </div>
                                 </div>
                             </div>
