--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="visaType" id="studentVisa" value="student" checked>
+                                    <input class="form-check-input" type="radio" name="visaType" style="height:35px; width:35px; id="studentVisa" value="student" checked>
                                     <label class="form-check-label" for="studentVisa">
                                         Student Visa
                                     </label>
