--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="visaType" id="visitorVisa" value="visitor">
                                     <label class="form-check-label" for="visitorVisa">
-                                        other Visa
+                                        Other Visas
                                     </label>
                                 </div>
                             </div>
