--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                                             <input type="text" name="Visitor Duration" class="form-control" placeholder="Duration of stay (e.g 1 Month or 15 days)" required>
                                         </div>
                                         <div class="col-md-6 mb-3">
-                                            <input type="number" name="Visitor Number" class="form-control" placeholder="Number of Visitors" min="0" max="100" required>
+                                            <input type="number" name="visitorNumber" class="form-control" placeholder="Number of Visitors" min="0" max="100" required>
                                         </div>
                                     </div>
                                     <div class="row">
