--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="visaType" id="visitorVisa" value="visitor">
+                                    <input class="form-check-input" type="radio" name="visaType" id="visitorVisa" value="Other">
                                     <label class="form-check-label" for="visitorVisa">
                                         Other Visas
                                     </label>
