--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                                     </div>
                                     <div class="col-md-4 mb-3">
                                         <label for="already">Have you travelled Abroad before?</label>
-                                        <select style="height: 45px;" id="alreadyvisited" name="Visitor Travelled before" class="form-control locked-field" disabled>
+                                        <select style="height: 45px;" id="alreadyvisited" name="Visitor Travelled before" class="form-control" required>
                                             <option value="none">None</option>
                                             <option value="Yes">Yes</option>
                                             <option value="No">No</option>    
