--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                                 <h3 class="section-title">Other Details</h3>
                                 <div class="row">
                                     <div class="col-md-3 mb-3">
-                                        <label for="pass">Do you have Passport?</label>
+                                        <label for="pass1">Do you have Passport?</label>
                                         <select style="height: 45px;" id="pass" name="Visitor Passport" class="form-control" required>
                                             <option value="none">None</option>
                                             <option value="Yes">Yes</option>
