--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                                         </div>
                                         <div class="col-md-4 mb-3">
                                             <label for="about us">How do you know about us ?</label>
-                                            <select style="height: 45px" id="about_us" name="about_us" class="form-control" required>
+                                            <select style="height: 45px" id="about_us" name="aboutus" class="form-control" required>
                                                 <option value="search_engine">Search Engine (e.g., Google)</option>
                                                 <option value="social_media">Social Media</option>
                                                 <option value="friend_family">Friend or Family</option>
