--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                     <input type="text" name="Name" class="form-control" placeholder="Full Name" required>
                                 </div>
                                 <div class="col-md-6 mb-3">
-                                    <input type="email" name="Email" pattern="[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$" class="form-control" placeholder="Email" required>
+                                    <input type="email" name="Email" pattern="[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$" class="form-control" placeholder="Email">
                                 </div>
                                 <div class="col-md-6 mb-3">
                                     <input type="tel" name="Student phone" id="phone" class="form-control" placeholder="Student Phone Number (10 digits)" pattern="[0-9]{10}" maxlength="10" required>
