--- a/index.html
+++ b/index.html
@@ -63,28 +63,28 @@
                                     <input type="email" name="Email" pattern="[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$" class="form-control" placeholder="Email">
                                 </div>
                                 <div class="col-md-6 mb-3">
-                                    <input type="tel" name="Student phone" id="phone" class="form-control" placeholder="Student Phone Number (10 digits)" pattern="[0-9]{10}" maxlength="10" required>
+                                    <input type="tel" name="Student phone" id="phone" class="form-control" placeholder="Student Phone Number (10 digits)" pattern="[0-9]{10}" maxlength="10">
                                 </div>
                                 <div class="col-md-6 mb-3">
-                                    <input type="date" name="DOB" id="dateOfBirth" class="form-control" required>
+                                    <input type="date" name="DOB" id="dateOfBirth" class="form-control">
                                     <label for="dateOfBirth" class="date-label">Date of Birth</label>
                                 </div>
                                 <div class="col-md-6 mb-3">
                                     <input type="text" name="Parents Name" class="form-control" placeholder="Father/Mother/Husband's Name" required>
                                 </div>
                                 <div class="col-md-6 mb-3">
-                                    <input type="text" name="Parents Occupation" class="form-control" placeholder="Father/Mother/Husband's Occupation" required>
+                                    <input type="text" name="Parents Occupation" class="form-control" placeholder="Father/Mother/Husband's Occupation">
                                 </div>
                                 
                                 <div class="col-md-6 mb-3">
-                                    <input type="tel" name="Parents phone" id="phone1" class="form-control" placeholder="Parent/Husband Phone Number (10 digits)" pattern="[0-9]{10}" maxlength="10" required>
+                                    <input type="tel" name="Parents phone" id="phone1" class="form-control" placeholder="Parent/Husband Phone Number (10 digits)" pattern="[0-9]{10}" maxlength="10">
                                 </div>
                                 <div class="col-md-6 mb-3">
-                                    <input type="text" name="Last Qualification" class="form-control" placeholder="Last Qualification" required>
+                                    <input type="text" name="Last Qualification" class="form-control" placeholder="Last Qualification">
                                 </div>
                                 
                                 <div class="col-md-12 mb-3">
-                                    <input type="text" name="address" class="form-control" placeholder="Address" required>
+                                    <input type="text" name="address" class="form-control" placeholder="Address">
                                 </div>
                             </div>
                         </div>
